--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.6.2",
+    "react-iframe": "^1.1.0",
     "react-router-dom": "^4.0.0",
     "styled-jsx": "^2.2.6",
     "uuid": "^3.2.1"
